--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+.control-section {
+    border: 1px solid rgb(110, 110, 110);
+    padding: 0.5vw;
+    margin: 2vw;
+    max-width: 25vw;
+    max-height: 75vh;
+    overflow-y: scroll;
+}
 .palette-list {
     list-style-type: none;
 }
